--- a/smf/manifests/dapi.xml.in
+++ b/smf/manifests/dapi.xml.in
@@ -2,13 +2,13 @@
 <!DOCTYPE service_bundle SYSTEM "/usr/share/lib/xml/dtd/service_bundle.dtd.1">
 <!--
 	Copyright (c) 2012, Joyent, Inc. All rights reserved.
-
-	This is a sample SMF manifest. If you want to actually use it, you'll
-	need to replace @@PREFIX@@ below with the path to this workspace.
+ 	This is a sample SMF manifest. If you want to actually use it, you'll
+ 	need to replace @@PREFIX@@ in the *generated* file with the path to
+	whereever this package gets installed.
  -->
 
 <service_bundle type="manifest" name="smartdc-ca-castashsvc">
-<service name="smartdc/application/bapi" type="service" version="1">
+<service name="smartdc/application/dapi" type="service" version="1">
 
 <dependency name="network" grouping="require_all" restart_on="error" type="service">
 	<service_fmri value="svc:/network/physical" />
@@ -17,7 +17,7 @@
 	<service_fmri value="svc:/system/filesystem/local" />
 </dependency>
 
-<exec_method type="method" name="start" exec="node @@PREFIX@@/server.js &amp;" timeout_seconds="30" />
+<exec_method type="method" name="start" exec="@@NODE@@ @@PREFIX@@/server.js &amp;" timeout_seconds="30" />
 <exec_method type="method" name="stop" exec=":kill" timeout_seconds="30" />
 
 <instance name="default" enabled="true" />
