--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "boilerplateapi",
-  "description": "SmartDataCenter Boilerplate API",
-  "version": "1.0.0",
-  "author": "Joyent (joyent.com)",
+  "name": "dapi",
+  "description": "Designation API",
+  "version": "7.0.0",
+  "author": "Andres Rodriguez (joyent.com)",
   "private": true,
   "dependencies": {
-    "restify": "https://github.com/mcavage/node-restify/tarball/master#0dfba4fdfd9def5111c29dffd241f344ff1293a8",
+    "restify": "git://github.com/mcavage/node-restify.git",
     "node-uuid": "1.2.0",
     "filed": "0.0.5"
   },
