--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "dependencies": {
     "restify": "git://github.com/mcavage/node-restify.git",
     "node-uuid": "1.2.0",
-    "filed": "0.0.5"
+    "filed": "0.0.5",
+    "bunyan": "0.5.3",
+    "ldapjs": "0.4.8",
+    "expiring-lru-cache": "2.0.0",
+    "sprintf": "0.1.1"
   },
   "devDependencies": {
     "tap": "0.1"
