DAPI-11: make check

--- a/tools/jsl.node.conf
+++ b/tools/jsl.node.conf
@@ -122,6 +122,7 @@
 +define Buffer
 +define JSON
 +define Math
++define module
 
 ### JavaScript Version
 # To change the default JavaScript version:
