--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "author": "Andres Rodriguez (joyent.com)",
   "private": true,
   "dependencies": {
-    "restify": "git://github.com/mcavage/node-restify.git",
+    "restify": "1.4.2",
     "node-uuid": "1.2.0",
     "filed": "0.0.5",
     "bunyan": "0.6.8",
     "ldapjs": "0.4.8",
     "expiring-lru-cache": "2.0.0",
     "sprintf": "0.1.1",
-    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git"
+    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git",
+    "nodeunit": "0.7.4"
   },
   "devDependencies": {
     "tap": "0.1"
