--- a/package.json
+++ b/package.json
@@ -9,16 +9,12 @@
     "node-uuid": "1.2.0",
     "filed": "0.0.5",
     "bunyan": "0.6.8",
-    "ldapjs": "0.4.8",
-    "expiring-lru-cache": "2.0.0",
-    "sprintf": "0.1.1",
-    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git"
+    "expiring-lru-cache": "2.0.0"
   },
   "devDependencies": {
     "nodeunit": "0.7.4"
   },
   "scripts": {
-    "start": "node ./server.js",
     "start": "node ./server.js"
   }
 }
