--- a/config.coal.json
+++ b/config.coal.json
@@ -1,15 +1,7 @@
 {
   "logLevel": "trace",
+  "algorithms": ["most-ram"],
   "api": {
     "port": 8080
-  },
-  "ufds": {
-    "url": "ldaps://10.88.88.50:636",
-    "bindDN": "cn=root",
-    "bindPassword": "secret",
-    "cache": {
-      "size": 1000,
-      "expiry": 300
-    }
   }
 }
