--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-/node_modules
-/tmp
+node_modules
 build
 docs/*.json
 docs/*.html
-cscope.in.out
-cscope.po.out
-cscope.out
-smf/manifests/dapi.xml
+smf/manifests/*.xml
 config.json
+*.sublime-project
+*.sublime-workspace
