--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "private": true,
   "dependencies": {
     "dtrace-provider": "0.0.7",
-    "restify": "1.4.2",
-    "node-uuid": "1.2.0",
-    "filed": "0.0.5",
-    "bunyan": "0.6.8",
-    "expiring-lru-cache": "2.0.0"
+    "restify": "1.4.3",
+    "node-uuid": "1.3.3",
+    "bunyan": "0.8.0"
   },
   "devDependencies": {
     "nodeunit": "0.7.4"
