DAPI-41 - switch plugins to use pipeline.

--- a/config.coal.json
+++ b/config.coal.json
@@ -1,6 +1,6 @@
 {
   "logLevel": "trace",
-  "algorithms": ["most-ram"],
+  "algorithms": ["sort-ram", "pick-first"],
   "api": {
     "port": 8080
   }
