DAPI-42 - moved server min-available RAM checks to plugin.

--- a/config.coal.json
+++ b/config.coal.json
@@ -1,6 +1,6 @@
 {
   "logLevel": "trace",
-  "algorithms": ["sort-ram", "pick-first"],
+  "algorithms": ["filter-min-ram", "sort-ram", "pick-first"],
   "api": {
     "port": 8080
   }
