--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "dapi",
   "description": "Designation API",
   "version": "7.0.0",
-  "author": "Andres Rodriguez (joyent.com)",
+  "author": "Marsell Kukuljevic, Andres Rodriguez (joyent.com)",
   "private": true,
   "dependencies": {
-    "dtrace-provider": "0.0.7",
-    "restify": "1.4.3",
-    "node-uuid": "1.3.3",
-    "bunyan": "0.8.0"
+    "restify": "2.1.1",
+    "bunyan": "0.18.2",
+    "node-uuid": "1.4.0"
   },
   "devDependencies": {
     "nodeunit": "0.7.4"
