--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "deps/jsstyle"]
 	path = deps/jsstyle
 	url = git://github.com/davepacheco/jsstyle.git
+[submodule "deps/sdc-scripts"]
+	path = deps/sdc-scripts
+	url = git@git.joyent.com:sdc-scripts.git
