Revert "DAPI-185 - abort on uncaught exception."
This reverts commit 78e1a75e55014d1ea7424adf8bc8cb08f52d6ee5.

--- a/smf/manifests/dapi.xml.in
+++ b/smf/manifests/dapi.xml.in
@@ -23,7 +23,7 @@
     <exec_method
       type="method"
       name="start"
-      exec="@@NODE@@ --abort_on_uncaught_exception @@PREFIX@@/bin/server.js &amp;"
+      exec="@@NODE@@ @@PREFIX@@/bin/server.js &amp;"
       timeout_seconds="30">
       <method_context working_directory="/opt/smartdc/dapi">
         <method_credential user="nobody" group="nobody" privileges="basic,net_privaddr"/>
