--- a/smf/manifests/dapi.xml.in
+++ b/smf/manifests/dapi.xml.in
@@ -23,7 +23,7 @@
     <exec_method
       type="method"
       name="start"
-      exec="@@NODE@@ @@PREFIX@@/bin/server.js &amp;"
+      exec="@@NODE@@ --abort-on-uncaught-exception @@PREFIX@@/bin/server.js &amp;"
       timeout_seconds="30">
       <method_context working_directory="/opt/smartdc/dapi">
         <method_credential user="nobody" group="nobody" privileges="basic,net_privaddr"/>
