--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "deps/jsstyle"]
 	path = deps/jsstyle
 	url = git://github.com/davepacheco/jsstyle.git
+[submodule "deps/restdown-brand-remora"]
+	path = deps/restdown-brand-remora
+	url = git@github.com:joyent/restdown-brand-remora.git
