--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/nodeunit test/*.test.js test/algorithms/*.test.js"
-  }
+  },
+  "license": "MPL-2.0"
 }
