--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "dapi",
-  "description": "Designation API",
+  "description": "SmartDataCenter Designation API",
   "version": "7.0.0",
-  "author": "Marsell Kukuljevic, Andres Rodriguez (joyent.com)",
+  "author": "Joyent (joyent.com)",
   "private": true,
   "dependencies": {
-    "bunyan": "0.22.0",
-    "node-uuid": "1.4.0",
+    "bunyan": "~1.3.3",
+    "node-uuid": "~1.4.0",
     "joyent-schemas": "git://github.com/joyent/schemas.git#7d4e7ba",
-    "jsprim": "~0.5.1"
+    "jsprim": "~0.6.1"
   },
   "devDependencies": {
     "nodeunit": "0.7.4"
