--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "jsprim": "~0.6.1"
   },
   "devDependencies": {
-    "nodeunit": "0.7.4"
+    "tape": "4.0.0"
   },
   "scripts": {
     "test": "./node_modules/.bin/nodeunit test/*.test.js test/algorithms/*.test.js"
