--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Joyent (joyent.com)",
   "private": true,
   "dependencies": {
+    "assert-plus": "~1.0.0",
     "bunyan": "~1.3.3",
     "node-uuid": "~1.4.0",
     "joyent-schemas": "git://github.com/joyent/schemas.git#8e19f70",
