--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dapi",
   "description": "SmartDataCenter Designation API",
-  "version": "7.1.0",
+  "version": "8.0.0",
   "author": "Joyent (joyent.com)",
   "private": true,
   "dependencies": {
@@ -9,7 +9,8 @@
     "bunyan": "1.8.5",
     "libuuid": "0.2.1",
     "joyent-schemas": "git://github.com/joyent/schemas.git#c661af34f9fa839aada1ff5c215067d9c86cbe89",
-    "jsprim": "1.3.1"
+    "jsprim": "1.3.1",
+    "vasync": "~1.6.4"
   },
   "devDependencies": {
     "tape": "4.0.0"
