--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dapi",
   "description": "SmartDataCenter Designation API",
-  "version": "8.6.0",
+  "version": "8.7.0",
   "author": "Joyent (joyent.com)",
   "private": true,
   "dependencies": {
@@ -10,7 +10,8 @@
     "libuuid": "0.2.1",
     "joyent-schemas": "git+https://github.com/joyent/schemas.git#09cebfca94169601568fec60f7a6144130f7fd31",
     "jsprim": "1.3.1",
-    "vasync": "~1.6.4"
+    "vasync": "~1.6.4",
+    "xregexp": "3.1.0"
   },
   "devDependencies": {
     "tape": "4.0.0"
